--- a/nhgh.qmd
+++ b/nhgh.qmd
@@ -213,9 +213,9 @@ redun(~ age + bmi + ht + wt + leg + arml + armc + waist + tri + sub + re + sex,
 
 ```{r}
 #| fig.height: 4
-getRs('princmp.r')   # simplifies things
+getRs('princmp.r')   # gives a lot of useful output and decodes PCs with stepwise regression
 pc <- princmp(~ age + ht + wt + leg + arml + armc + waist + tri + sub,
-              data=d)
+              data=d, sw=TRUE)
 pc1 <- pc[, 1]   # vector of PC1
 pc2 <- pc[, 2]   # PC2
 ```
@@ -223,6 +223,16 @@ pc2 <- pc[, 2]   # PC2
 * How many components would you choose?
 
 * To use PC-based data reduction in outcome prediction, substitute `pc1`, `pc2`, ... for some of the constituent variables.
+
+* Let's see how PCs predict glycohemoglobin in an ordinal model
+
+```{r}
+orm(gh ~ pc[,1], data=d)
+orm(gh ~ pc[,1:2], data=d)
+orm(gh ~ pc[,1:3], data=d)
+orm(gh ~ pc[,1:4], data=d)
+orm(gh ~ pc, data=d)
+```
 
 # Computing Environment
 
