--- a/nhgh.qmd
+++ b/nhgh.qmd
@@ -214,7 +214,7 @@ redun(~ age + bmi + ht + wt + leg + arml + armc + waist + tri + sub + re + sex,
 ```{r}
 #| fig.height: 4
 getRs('princmp.r')   # gives a lot of useful output and decodes PCs with stepwise regression
-pc <- princmp(~ age + ht + wt + leg + arml + armc + waist + tri + sub,
+pc <- princmp(~ age + ht + wt + leg + arml + armc + waist + tri + sub +re,
               data=d, sw=TRUE)
 pc1 <- pc[, 1]   # vector of PC1
 pc2 <- pc[, 2]   # PC2
@@ -224,14 +224,18 @@ pc2 <- pc[, 2]   # PC2
 
 * To use PC-based data reduction in outcome prediction, substitute `pc1`, `pc2`, ... for some of the constituent variables.
 
-* Let's see how PCs predict glycohemoglobin in an ordinal model
+The `princmp` function also can do sparse PCs if you have installed the `pcaPP` package.  This results in many of the loadings being set exactly to zero, effectively doing variable clustering and PC simultaneously.
 
 ```{r}
-orm(gh ~ pc[,1], data=d)
-orm(gh ~ pc[,1:2], data=d)
-orm(gh ~ pc[,1:3], data=d)
-orm(gh ~ pc[,1:4], data=d)
-orm(gh ~ pc, data=d)
+spc <- princmp(~ age + ht + wt + leg + arml + armc + waist + tri + sub +re,
+               data=d, sw=TRUE, method='sparse')
+```
+
+* Let's see how regular and sparce PCs predict glycohemoglobin in an ordinal model
+
+```{r}
+for(k in 1:5) print(orm(gh ~  pc[, 1:k], data=d))
+for(k in 1:5) print(orm(gh ~ spc[, 1:k], data=d))
 ```
 
 # Computing Environment
